syntax = "proto3";

package clutch.featureflag.v1;

option go_package = "github.com/lyft/clutch/backend/api/featureflag/v1;featureflagv1";

import "google/api/annotations.proto";

import "api/v1/annotations.proto";

service FeatureFlagAPI {
  rpc GetFlags(GetFlagsRequest) returns (GetFlagsResponse) {
    option (google.api.http) = {
      post : "/v1/featureflag/getFlags"
      body : "*"
    };
    option (clutch.api.v1.action).type = READ;
  }
}

message GetFlagsRequest {
}

message Flag {
  oneof type {
    bool boolean_value = 1;
  }
}

message GetFlagsResponse {
  // Map of ID to flag.
  map<string, Flag> flags = 1;
}
